css/style.css
/*****Global Styles*****/

* {
  box-sizing: border-box;
  width: 100%;
  margin: 0 auto;
  font-size: 16px;
}

html,
body {
  height: 100%;
  

}

html {
  font-size: 62.5%;
}

body {
  font-family: "Playfair Display", serif;
  font-size: 1.6rem;
  background-color: #5d7466;
  color: #FFFFFF;
  
}

/*****Header Styles*****/

header {
  border-bottom: 0.5em solid #FFFFFF;
}

.content-wrapper {
  display: flex;
  justify-content: center;
  text-align: center;
  flex-flow: row wrap;

  width: 90%;
  max-width: 1200px;
}

header h1 {
  font-style: italic;
  margin-top: 20px;
  font-weight: 300;
  font-size: 1.875em;
}

header h2 {
  font-style: italic;
  font-size: 0.95em;
  font-weight: 200;
  margin-top: 10px;
  margin-bottom: 5px;
}

nav ul {
  display: flex;
  list-style: none;
  font-size: 0.9em;
  font-style: italic;
  text-transform: capitalize;
  font-weight: 100;
  padding-left: 0px;
}

header nav ul li {
  width: 100%;
  font-size: 0.875rem;
  
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  text-decoration: none;
  color: #FFFFFF;
  margin-top: 10px;
  margin-bottom: 10px;
}

header nav ul li a {
  text-decoration: none;
  color: #FFFFFF;
  white-space: nowrap;
}

#contact-link {
  padding: 0.1em 0.3em;
  background: linear-gradient(90deg, #0097b2, #7ed957);
  border-radius: 20px;
  

}

